--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ body {
     transform: translateY(-1px);
   }
   
-   
+  
 
    #contact {
     background-size: cover;
@@ -283,7 +283,18 @@ body {
 #contact-form button:active {
     transform: translateY(1px);
 }
-
+#resume {
+    background-image: url('https://i0.wp.com/picjumbo.com/wp-content/uploads/all-black-working-setup-diary-and-iphone.jpg?w=2210&quality=70');
+    background-size: cover;
+    background-position: center;
+    padding: 9rem;
+    margin: 4rem 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #f8f8f8;
+}
 
    .project {
     background-image: url('https://www.shutterstock.com/image-photo/islamic-background-photo-mosque-shadows-600nw-2129645690.jpg');
